test/sidecar/config/gateway/gatewayparams.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: inference-gateway-params
spec:
  kube:
    service:
      type: ClusterIP
