test/sidecar/config/gateway/kustomization.yaml
namespace: e2e-pd

resources:
  - gateway.yaml
  - llmroute.yaml
  - gatewayparams.yaml

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
